--- a/rick-and-morty/package.json
+++ b/rick-and-morty/package.json
@@ -5,20 +5,30 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint --ext .tsx,.ts ./ --fix"
   },
   "dependencies": {
     "next": "11.1.2",
     "react": "17.0.2",
-    "styled-components": "5.2.1",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "5.2.1"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "5.10.2",
+    "@typescript-eslint/parser": "5.10.2",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.28.0",
     "@types/express": "4.17.11",
     "@types/express-serve-static-core": "4.17.19",
-    "@types/styled-components": "5.1.9",
     "@types/node": "14.14.37",
     "@types/react": "17.0.3",
+    "@types/styled-components": "5.1.9",
+    "eslint": "^7.12.1",
+    "prettier": "^2.5.1",
     "typescript": "4.4.3"
   }
 }
