add shared component 'character'

--- a/rick-and-morty/tsconfig.json
+++ b/rick-and-morty/tsconfig.json
@@ -18,6 +18,7 @@
     "paths": {
       "@templates/*": ["./src/components/_templates/*"],
       "@shared/*": ["./src/components/_shared/*"],
+      "@types": ["./src/components/types.ts"],
       "@mock/*": ["./mockdata/*"]
     }
   },
