add image optimization

--- a/rick-and-morty/tsconfig.json
+++ b/rick-and-morty/tsconfig.json
@@ -19,7 +19,8 @@
       "@templates/*": ["./src/components/_templates/*"],
       "@shared/*": ["./src/components/_shared/*"],
       "@types": ["./src/components/types.ts"],
-      "@mock/*": ["./mockdata/*"]
+      "@mock/*": ["./mockdata/*"],
+      "@public/*": ["./public/*"]
     }
   },
   "include": ["next-env.d.ts", "src/**/*.d.ts", "**/*.ts", "**/*.tsx"],
