--- a/rick-and-morty/package.json
+++ b/rick-and-morty/package.json
@@ -6,15 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint --ext .tsx,.ts ./ --fix"
+    "lint": "eslint --ext .tsx,.ts ./ --fix",
+    "test": "jest"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "CI=true npm run test"
+    }
   },
   "dependencies": {
-    "next": "11.1.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "styled-components": "5.2.1"
+    "next": "^11.1.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "5.16.2",
+    "@testing-library/react": "12.1.2",
     "@types/express": "4.17.11",
     "@types/express-serve-static-core": "4.17.19",
     "@types/node": "14.14.37",
@@ -22,14 +30,21 @@
     "@types/styled-components": "5.1.9",
     "@typescript-eslint/eslint-plugin": "5.10.2",
     "@typescript-eslint/parser": "5.10.2",
-    "babel-plugin-styled-components": "^2.0.2",
-    "eslint": "^7.12.1",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.28.0",
-    "prettier": "^2.5.1",
+    "babel-plugin-styled-components": "2.0.2",
+    "eslint": "7.12.1",
+    "eslint-config-standard": "16.0.3",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-react": "7.28.0",
+    "husky": "^7.0.4",
+    "jest": "27.5.0",
+    "lint-staged": "^12.3.3",
+    "prettier": "2.5.1",
     "typescript": "4.4.3"
+  },
+  "lint-staged": {
+    "*.{tsx,ts}": "eslint --cache --fix",
+    "*.{js,css,md,ts,tsx}": "prettier --write"
   }
 }
