--- a/package.json
+++ b/package.json
@@ -10,11 +10,6 @@
     "test": "jest",
     "prepare": "husky install"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "CI=true npm run test"
-    }
-  },
   "dependencies": {
     "next": "^11.1.2",
     "react": "^17.0.2",
@@ -40,6 +35,7 @@
     "eslint-plugin-react": "7.28.0",
     "husky": "^7.0.4",
     "jest": "27.5.0",
+    "jest-styled-components": "^7.0.8",
     "lint-staged": "^12.3.3",
     "prettier": "2.5.1",
     "typescript": "4.4.3"
