--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,12 +1,17 @@
-name: learn-github-actions
-on: [push]
+name: tests
+on:
+  push:
+    branches:
+      - develop
+
 jobs:
-  check-bats-version:
+  tasts-start:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
           node-version: "14"
-      - run: npm install -g bats
-      - run: bats -v
+      - run: yarn install
+      - run: yarn prepare
+      - run: yarn jest
