--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,7 +29,20 @@ jobs:
 
       - name: Install all dependencies
         run: yarn install --frozen-lockfile
-      - name: Build
+      - name: Set husky hooks
         run: yarn prepare
       - name: Testing
         run: yarn jest
+
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "16"
+
+      - name: Install all dependencies
+        run: yarn install --frozen-lockfile
+      - name: Build
+        run: yarn next build
