--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.8",
+    "graphql": "^16.3.0",
     "next": "^11.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
